<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- App title and fragment titles -->
    <string name="app_name">Gift Planner</string>
    <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
    <string name="sleep_quality_fragment">SleepQualityFragment</string>

    <!-- Button labels -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>


    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>

    <string name="titleClothes"><![CDATA[<h3>HERE IS YOUR CLOTHES</h3>]]></string>
    <string name="name">Name: </string>
    <string name="description">"Description: "</string>
    <string name="season">"Season: "</string>
    <string name="type">"Type: "</string>
    <string name="size">"Size: "</string>
    <string name="nothingWasFound">"Nothing was found"</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="clothes_form_fragment">ClothesFormFragment</string>
    <string name="summer">summer</string>
    <string name="winter">winter</string>
    <string name="demiseason">demiseason</string>
    <string name="choosethetype">Choose type</string>
    <string name="choosetheseason">Choose season</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="shoes">Shoes</string>
    <string name="headdress">Headdress</string>
    <string name="accessories">Accessories</string>
    <string name="shoesSize">Shoes size</string>
    <string name="enter_shoes_size">Enter size</string>
    <string name="chooseTheSize">Choose size</string>
    <string name="searchByName">Search clothes by name</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="hereIsYourClothes">Here is your clothes</string>
    <string name="foundedItems">Founded items:</string>
    <string name="filter">Filter</string>
    <string name="searchByNameOrDescription">Search by name or description</string>
    <string name="clearFilters">Clear filters</string>
    <string name="update">Update</string>
    <string name="holiday">"Holiday: "</string>
    <string name="receiver">"Receiver: "</string>
    <string name="date">"Date: "</string>
    <string name="giftName">"Gift: "</string>
    <string name="price">"Price: "</string>
    <string name="receiver_list_fragment">ReceiverListFragment</string>
    <string name="deleteAlert">Do you really want to delete this receiver?</string>
    <string name="toReceivers">To Receivers</string>
    <string name="toGifts">To Gifts</string>
    <string name="gift">Gift</string>
    <string name="enter_a_gift">Enter a gift</string>
    <string name="gift_list_fragment">GiftListFragment</string>
    <string name="enter_a_price">Enter a price</string>
    <string name="deleteGiftAlert">Do you really want to delete this gift?</string>
    <string name="searchByDatePattern">dd.mm.yyyy</string>
    <string name="searchByDate">Search by date</string>
    <string name="gifts">"GIFTS: "</string>
    <string name="deletePlanAlert">Do you really want to delete this plan?</string>
    <string name="incorrectDateFormat">Incorrect Date format</string>

</resources>
