<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".planslist.PlanListFragment">

        <LinearLayout
            android:id="@+id/date_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_field_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:hint="@string/searchByDate"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@+id/search_button"
                app:placeholderText="@string/searchByDatePattern">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_field"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/search_button"
                style="@style/SleepButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/search"
                app:layout_constraintStart_toEndOf="@+id/search_field_layout">

            </Button>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plans_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/date_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/clear_button"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/create_button"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/create"
            app:layout_constraintEnd_toStartOf="@+id/to_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clear_button"
            />

        <LinearLayout
            android:id="@+id/to_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_button">

            <Button
                android:id="@+id/to_gifts_button"
                style="@style/SleepButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/toGifts"
                />

            <Button
                android:id="@+id/to_receivers_button"
                style="@style/SleepButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/toReceivers"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
